# disjoint_impls

./: CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml  dependabot.yaml  dependabot.yml
.github/workflows/: main.yaml  main.yml
src/: disjoint.rs  disjoint_impls.rs  generalize.rs  helper_trait.rs  lib.rs  main.rs  main_trait.rs  normalize.rs  param.rs  substitute.rs  superset.rs  unconstrained.rs  validate.rs
src/generalize/: expr.rs  generics.rs  item.rs  pat.rs  path.rs  stmt.rs  token.rs  ty.rs
src/superset/: expr.rs  generics.rs  pat.rs  path.rs  stmt.rs  ty.rs
tests/: assoc_binding_overlap.rs  basic.rs  blanket_for_derivative_type.rs  composite_where_clause.rs  concrete_assoc_type.rs  concrete_type.rs  derivative_assoc_binding.rs  derivative_self_ty.rs  differing_inherent_items.rs  disjoint_inherent_impl.rs  disparate_trait_generics.rs  dispatch_inherent_on_generic.rs  dispatch_on_assoc_type.rs  dispatch_on_concrete_type.rs  dispatch_on_different_parameters.rs  dispatch_on_generic.rs  dispatch_on_local_trait.rs  dispatch_on_self.rs  dispatch_on_undefined_assoc_binding.rs  dispatch_with_different_param.rs  dispatch_with_same_param.rs  elided_lifetime.rs  extra_bounds.rs  extra_param_bounds.rs  extra_parameter.rs  fully_qualified_generic_param.rs  gats.rs  generalized_signature.rs  generic_arg_constraint.rs  ignored_assoc_bound.rs  inherent_gats.rs  inherent_nested_subgroups.rs  inherent_with_receiver.rs  lifetime.rs  lifetimes.rs  multiple_associated_types.rs  multiple_blanket_impls.rs  multiple_dispatch_traits.rs  nested_subgroups.rs  nested_subgroups_2.rs  (+26 more)
tests/cfg_test_crate/: Cargo.toml
tests/remote_trait/: Cargo.toml
tests/ui_fail/: already_used.rs  already_used.stderr  conflicting_inherent_items.rs  conflicting_inherent_items.stderr  const_expr_overlap.rs  const_expr_overlap.stderr  default_parameters.rs  default_parameters.stderr  different_trait_params.rs  different_trait_params.stderr  guarded_assoc_binding.rs  missing_impl.rs  (+14 more)
(+10 files in other folders)
