[package]
name = "disjoint_impls"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Marin Veršić <marin.versic101@gmail.com>"]
repository = "https://github.com/mversic/disjoint_impls"
description = "Support for mutually disjoint impls"
keywords = ["disjoint", "exclusive", "associated", "impl", "implementation"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.74", features = ["full", "extra-traits", "visit", "visit-mut"]}
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.86"
itertools = "0.13.0"
indexmap = "2.5.0"
quote = "1.0.37"
