[package]
name = "disjoint_impls"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Marin Veršić <marin.versic101@gmail.com>"]
repository = "https://github.com/mversic/disjoint_impls"
description = "Support for mutually disjoint impls"
keywords = ["disjoint", "exclusive", "associated", "impl", "implementation"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.100", features = ["full", "extra-traits", "visit", "visit-mut"]}
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.94"
itertools = "0.13.0"
indexmap = "2.8.0"
quote = "1.0.40"
