[workspace]
members = [".", "tests/cfg_test_crate"]

[package]
name = "disjoint_impls"
version = "1.3.5"
edition = "2024"
license = "Apache-2.0"
authors = ["Marin Veršić <marin.versic101@gmail.com>"]
repository = "https://github.com/mversic/disjoint_impls"
description = "Support for mutually disjoint impls"
keywords = ["disjoint", "exclusive", "associated", "impl", "implementation"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.105", features = ["full", "extra-traits", "visit", "visit-mut"]}
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.97"
itertools = "0.14.0"
indexmap = "2.10.0"
quote = "1.0.40"

[dev-dependencies]
remote_trait = { path = "tests/remote_trait" }
trybuild = "1.0.110"
